# ETEMAC-CALCULADORA-FREQUENCIA

./: .last_build_id  cras.py  dias.py  flutter_bootstrap.js  index.html  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
assets/app/: app.zip.hash
src/: cras.py  main.py  mes.py
