[project]
name = "etemac-calculadora-frequencia"
version = "0.1.0"
description = ""
authors = [
    {name = "tuliofalcao",email = "falcao.tulio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet (>=0.84.0,<0.85.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
