[tool.poetry]
name = "etemac-calculadora-frequencia"
version = "0.1.0"
description = ""
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]
readme = "README.md"
packages = [{include = "etemac_calculadora_frequencia"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = {extras = ["all"], version = "^0.84.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
